[package]
name = "mockable"
version = "0.1.0"
authors = ["Guillaume Leroy <pro.guillaume.leroy@gmail.com>"]
edition = "2021"
description = "Usefull components to make easier to mock your code"
documentation = "https://docs.rs/mockable"
license-file = "LICENSE"
keywords = ["mock", "mockable", "mocking", "test"]
categories = ["development-tools::testing"]

[features]
browser = ["dep:open"]
clock = ["dep:chrono"]
full = ["browser", "clock", "uuid"]
mock = ["dep:mockall"]
uuid = ["dep:uuid"]

[dependencies]
chrono = { version = "0.4", optional = true }
mockall = { version = "0.11", optional = true }
open = { version = "5.0", optional = true }
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"], optional = true }

[dev-dependencies]
mockall = "0.11"
